--- a/observe/attributes/attributes-assocations.html
+++ b/observe/attributes/attributes-assocations.html
@@ -16,38 +16,36 @@
 </div>	
 <script type='text/javascript' src='../../../steal/steal.js'></script>
 <script type='text/javascript' id="demo-source">
-steal('can/observe/attributes')
-.then('can/model','can/util/fixture')
-.then(function(){
+steal('can/observe/attributes', 'can/model','can/util/fixture', function(){
 	
 // simulate ajax response with fixtures
 can.fixture("/contacts.json", function(){
-  return [[{
+  return [{
     'id': 1,
     'name' : 'Justin Meyer',
     'birthday': '1982-10-20',
     tasks : [{
-      id: 1, 
-      title: "write up model layer", 
+      id: 1,
+      title: "write up model layer",
       due: "2010-10-5"
     }]},{
     'id': 2,
     'name' : 'Brian Moschel',
     'birthday': '1983-11-10',
     tasks : [{
-      id: 2, 
-      title: "write up funcunit", 
+      id: 2,
+      title: "write up funcunit",
       due: "2009-5-1"
     },{
-      id: 3, 
-      title: "test funcunit", 
+      id: 3,
+      title: "test funcunit",
       due: "2010-3-15"}]
     },{
       'id': 3,
       'name' : 'Bobby Joe',
       'birthday': '1980-2-10'
-  }]];
-})
+  }];
+});
 
 can.Model.convert.date = function(raw){
   if(typeof raw == 'string'){
@@ -61,7 +59,7 @@ can.Model.convert.date = function(raw){
 };
 
 // A task model that has a date
-can.Model("Task",{
+var Task = can.Model({
   attributes : {
     due : 'date'
   }
@@ -73,10 +71,10 @@ can.Model("Task",{
 });
 
 // A contact model that has many tasks
-can.Model("Contact",{
+var Contact = can.Model({
   attributes : { 
     birthday : 'date',
-    tasks: "Task.models"
+    tasks: Task.List
   },
   findAll : "/contacts.json"
 },{
